--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4825,8 +4825,8 @@ EntailmentType     ::= GroupOMS 'entails' GroupOMS
 EquivalenceDefinition ::= 'equivalence' EquivalenceName ':'
                           EquivalenceType 'end'
 EquivalenceName    ::= IRI
-EquivalenceType    ::= GroupOMS '<->' GroupOMS '=' OMS
-                     | Network '<->' Network '=' Network
+EquivalenceType    ::= GroupOMS '<->' GroupOMS ['=' OMS]
+                     | Network '<->' Network ['=' Network]
 ModuleRelDefinition ::= 'module' ModuleName [Conservative] ':'
                         ModuleType 'for' InterfaceSignature
 ModuleName         ::= IRI
@@ -10093,8 +10093,8 @@ EquivalenceDefinition ::= equivalence-definition
                                                  EquivalenceType
 EquivalenceName    ::= IRI
 EquivalenceType    ::= OMSEquivalence | NetworkEquivalence
-OMSEquivalence     ::= oms-equivalence OMS OMS OMS
-NetworkEquivalence ::= network-equivalence Network Network Network
+OMSEquivalence     ::= oms-equivalence OMS OMS [OMS]
+NetworkEquivalence ::= network-equivalence Network Network [Network]
 ModuleRelDefinition ::= module-definition ModuleName
                                           [ConservativityStrength] ModuleType
                                           InterfaceSignature
