--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2930,8 +2930,7 @@ for OMS in other DOL conformant languages (\emph{informative}).
 Annex \ref{a:uses} provides of \DOL texts, which provide examples for all \DOL constructs, which 
 are specified in the abstract syntax 
 (\emph{informative}).
-Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied  (\emph{informative}). For 
-each scenario,  a brief description  is provided, and the utilized \DOL features as well as the status of its implementation are listed.
+%Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied  (\emph{informative}). For  each scenario,  a brief description  is provided, and the utilized \DOL features as well as the status of its implementation are listed.
 
 Annex~\ref{a:tools} gives an overview of available  software tools for
 \DOL.  Annex~\ref{a:loc/id} discusses the implementation of a
@@ -3336,8 +3335,73 @@ The Dublin Core to PROV ontology translation%
 \footnote{\url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/}}
   is expressed partly by a symbol mapping and partly by FOL rules. These FOL rules are implemented by CONSTRUCT patterns in the SPARQL RDF query language.%
 \footnote{E.g., \url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/\#dct-creator}} 
-SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDF Schema languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.
-\DOL  not only supports the reuse of the existing Dublin Core RDF Schema and PROV OWL ontologies as modules of a distributed ontology (= OMS network), but it is also able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.
+SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which 
+ is different from the model-theoretic semantics of the OWL and RDF Schema languages; nevertheless 
+SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules 
+ between ontologies in RDF-based languages in a subset of FOL.
+\DOL  not only supports the reuse of the existing Dublin Core RDF Schema and PROV OWL ontologies as 
+ modules of a distributed ontology (= OMS network), but it is also able to support the description 
+of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, 
+and thus enable formal verification of the translation from Dublin Core to PROV.
+
+
+
+\section{Use Case Onto-6: Maintaining Different Versions of an Ontology 
+in Languages with Different Expressivity}
+Often is useful to maintain different versions of an ontology within languages, which differ in 
+ their expressivity. 
+ 
+ 
+For example,  DOLCE is a foundational ontology that has primarily been formalized in
+ the first-order logic 
+ontology language KIF (a predecessor of Common Logic), but also in OWL (``DOLCE Lite'') 
+\cite{dolce}. This ‘OWLized’ version was targeting use in semantic web services and domain 
+ontology interoperability, and to provide the generic categories and relationships to aid 
+ domain ontology development. DOLCE has been used also for semantic middleware, and in 
+OWL-formalized ontologies of different domains, including neuroimaging, computing, and ecology.
+  Given the differences in expressivity between KIF and OWL, DOLCE Lite 
+   had to simplify certain notions.  For example, 
+ the DOLCE Lite formalization of ``temporary parthood'' (something is part of something else at a 
+certain point or interval in time) omits any information about the time, as OWL only supports 
+binary predicates (a.k.a.\ ``properties'').  That leaves ambiguities for modeling a view from
+DOLCE Lite to the first-order DOLCE, as such a view would have to reintroduce the third (temporal) 
+component of such predicates:
+  \begin{itemize}
+  \item Should a relation asserted in terms of DOLCE Lite be assumed to hold for \emph{all} possible points/intervals in time, \ie should it be universally quantified?
+  \item Or should such a relation be assumed to hold for \emph{some} points/intervals in time, \ie should it be existentially quantified?
+  \item Or should a concrete value for the temporal component be assumed, \eg ``0'' or ``now''?
+  \end{itemize}
+%  
+\DOL supports the formalization of  all of these views. Given suitable consistency 
+checking tools, DOL enables the analysis of  whether any such view satisfies all further
+ axioms that the  first-order DOLCE states about temporal parthood.
+
+\section{Use Case Onto-7: Metadata within OMS Repositories}
+DOL provides a language for the metadata within OMS Repositories. 
+For example, the Common Logic Repository (COLORE) \footnote{\url{http://stl.mie.utoronto.ca/colore/}} is an open 
+repository of more than 150 ontologies as of December 2011, all formalized in Common Logic. 
+COLORE  stores metadata about its ontologies, which are represented using a custom XML schema that 
+covers the following aspects\footnote{\url{http://stl.mie.utoronto.ca/colore/metadata.html}}, 
+without specifying a formal semantics for them:
+  \begin{description}
+  \item[module provenance] author, date, version, description, keyword, parent 
+ontology\footnote{Note that this use of the term ``module'' in COLORE corresponds
+to the term \termref{structured OMS} in this \IS{}.}
+  \item[axiom source provenance] name, author, year\footnote{Note that this may cover any 
+   sentences\index{sentence} in the sense of this \IS{}.}
+  \item[direct relations] maps (signature morphisms), definitional extension, conservative 
+   extension, inconsistency between ontologies, imports, relative interpretation, faithful 
+interpretation, definable equivalence
+  \end{description}
+
+  \DOL provides built-in support for a subset of the ``direct relations'' and specifies a formal 
+semantics for them.  In addition, it supports the implementation of  the remainder of the COLORE 
+metadata vocabulary as an ontology, reusing suitable existing metadata vocabularies such as OMV, 
+and it supports the implementation of one or multiple Common Logic ontologies plus their 
+annotations as one coherent \DOL library.
+
+
+
 
 
 \section{Use Case Spec-1: Modularity of Specifications}\label{spec-1}
@@ -3807,7 +3871,6 @@ oms JointModel = clStateModel and
                  clTaxonomy
 end
 \end{lstlisting}
-
 
 \section{Conclusion}
 
@@ -11110,119 +11173,8 @@ end
 
 \end{lstlisting}
 
-\infannex{Use cases}\label{a:use-cases}
-
-This annex sketches scenarios that outline how \DOL is intended to be applied.  For each scenario,  the status of its implementation is described, the \DOL features it makes use of are listed, and a brief description is provided.
-
-\newenvironment{usecase}[3]{\sclause{#1}%
-\begin{description}
-\item[Status] #2
-\item[Features] #3
-\end{description}
-}{}
-\begin{usecase}{Generating multilingual labels for menus in a user interface}{exists (but not yet \DOL-based)}{Aligning (multiple OWL ontologies), Annotation}
-  DO-ROAM (\textbf{D}ata and \textbf{O}ntology driven \textbf{R}oute-finding \textbf{O}f \textbf{A}ctivity-oriented \textbf{M}obility\footnote{\url{http://www.do-roam.org}}) is a web service with an interactive frontend that extends OpenStreetMap by an ontology-based search for located activities and opening hours \cite{do-roam}.  The service is driven by a set of different OWL ontologies that have been aligned to each other using the Falcon matching tool \cite{HuQu-08}.  The user interface of the DO-ROAM web frontend offers multilingual labels, which are maintained in close connection to the underlying ontologies.
-
-  Porting DO-ROAM to \DOL would enable the coherent representation of the aligned ontologies as one OMS network, and it would enable  the maintenance of the user interface labels as annotations inside the ontology.
-\end{usecase}
-
-\begin{usecase}{Connecting devices of differing complexity in an Ambient Assisted Living setting}{core ontology (not \DOL-based) and service environment exists – the \DOL-based extensions not yet}{Logical OMS mappings across different logics, connection to linked open datasets}
-  Consider the following ambient assisted living (AAL) scenario:
-  \begin{quote}
-    Clara instructs her \textbf{wheelchair} to get her to the \textbf{kitchen} (\textbf{\underline{next door}} to the \textbf{living room}.  For \textbf{dinner}, she would like to take a \textit{pizza} from the \textbf{freezer} and bake it in the \textbf{oven}.  (Her diet is \textit{vegetarian}.)  \textbf{\underline{Afterwards}} she needs to rest in \textbf{bed}.
-  \end{quote}
-  Existing ontologies for ambient assisted living (\eg the OpenAAL\footnote{\url{http://openaal.org}} OWL ontology) cover the \emph{core} of these  concepts; they provide at least classes (or generic superclasses) corresponding to the concepts highlighted in \textbf{bold}.  However, that does not cover the scenario completely:
-  \begin{itemize}
-  \item Some concepts (here: food and its properties, \textit{italicized}) are not covered.  There are separate ontologies for that (such as the Pizza ontology\footnote{This is not a fully comprehensive food ontology, but rather a well-known sample OWL ontology; \cf \url{http://owl.cs.manchester.ac.uk/tutorials/protegeowltutorial/}}), whereas information about concrete products (here: information about the concrete pizza in Clara's oven) would rather come from Linked Open Datasets than from formal ontologies.
-  \item Not all concepts (here: space and time, \underline{underlined}) are covered at the required level of complexity.  OpenAAL says that appointments have a date and that rooms can be connected to each other, but not what exactly that means.  Foundational ontologies and spatial calculi, often formalized in first-order logic, cover space and time at the level of complexity required by a central controller of an apartment and by an autonomously navigating wheelchair.
-  \item Thirdly, even description logic might be too complex for very simple devices involved into the scenario, such as the kitchen light switch, for which propositional logic may be sufficient.
-  \end{itemize}
-  Thus, an adequate formalization of this scenario has to be heterogeneous.  For example, one could imagine the following axioms:
-  \begin{description}
-  \item[light switch] ``light is switched on if and only if someone is in the room and it is dark outside'' – this could be formalized in propositional logic as $\mathrm{light\_on}\equiv\mathrm{person\_in\_room}\wedge\mathrm{dark\_outside}$.
-  \item[freezer] ``a vegetarian pizza is a pizza whose toppings are all vegetarian'' – this could be formalized in description logic as $\mathrm{VegetarianPizza}\equiv\mathrm{Pizza}\sqcap \forall \mathrm{hasTopping}.\mathrm{Vegetarian}$
-  \item[wheelchair] ``two areas in a house (\eg a working area in a room) are either the same, or intersecting, or bordering, or separated, or one is part of the other'' – this could be formalized as an RCC-style spatial calculus in first-order logic as $$\begin{array}{ll}\forall a_1, a_2 . & \mathrm{equal}(a_1, a_2) \veebar \mathrm{overlapping}(a_1, a_2) \veebar \mathrm{bordering}(a_1, a_2) \veebar \mathrm{disconnected}(a_1, a_2) \\
-&\veebar \mathrm{part\_of}(a_1, a_2) \veebar \mathrm{part\_of}(a_2, a_1).\end{array}$$
-  \end{description}
-  
-  \DOL would be capable of expressing all that within one \DOL library of heterogeneous ontologies arranged around an OWL core (here: the OpenAAL ontology), including OMS mappings from OpenAAL to the other ontologies, as well as a re-declaration of a concrete pizza product from a product dataset as an instance of the Pizza OWL class.
-\end{usecase}
-
-\begin{usecase}{Interpreting the OWL formalization of the DOLCE foundational ontology in First-order logic}{potential use case}{Logical OMS mappings}
-  DOLCE is a foundational ontology that has primarily been formalized in the first-order logic ontology language KIF (a predecessor of Common Logic), but also in OWL (``DOLCE Lite'') \cite{dolce}. This ‘OWLized’ version was targeting use in semantic web services and domain ontology interoperability, and to provide the generic categories and relationships to aid domain ontology development. DOLCE has been used also for semantic middleware, and in OWL-formalized ontologies of neuroimaging, computing, ecology, and data mining and optimization.
-  Given the differences in expressivity, DOLCE Lite had to simplify certain notions.  For example, the DOLCE Lite formalization of ``temporary parthood'' (something is part of something else at a certain point or interval in time) omits any information about the time, as OWL only supports binary predicates (a.k.a.\ ``properties'').  That leaves ambiguities for modeling a view from DOLCE Lite to the first-order DOLCE, as such a view would have to reintroduce the third (temporal) component of such predicates:
-  \begin{itemize}
-  \item Should a relation asserted in terms of DOLCE Lite be assumed to hold for \emph{all} possible points/intervals in time, \ie should it be universally quantified?
-  \item Or should such a relation be assumed to hold for \emph{some} points/intervals in time, \ie should it be existentially quantified?
-  \item Or should a concrete value for the temporal component be assumed, \eg ``0'' or ``now''?
-  \end{itemize}
-  
-  \DOL would support the formalization of  all of these views and, given suitable consistency checking tools, the analysis of  whether any such view would satisfy all further axioms that the first-order DOLCE states about temporal parthood.
-\end{usecase}
-
-\begin{usecase}{Extending the OWL Time ontology to a more comprehensive coverage of time}{potential use case}{Logical OMS mappings}
-The OWL Time ontology\footnote{\url{http://www.w3.org/TR/2006/WD-owl-time-20060927/}} covers temporal concepts such as instants and intervals and has been designed for describing the temporal content of Web pages and the temporal properties of Web services.  While OWL is suitable for these intended applications, only a first-order axiomatization is capable of faithfully capturing all relevant notions, such as the trichotomy of the ``before'' relation: One instant is either before another one, or at the same time, or after.  Moreover, a relationship between facts expressed in terms of instants and facts expressed in terms of intervals (both of which is, independently, possible in OWL), can only be established via first-order logic, \eg by declaring an interval of length zero equivalent to an instant. 
-
-A separate first-order axiomatization of OWL Time exists
-\cite{OWLTime,OWLSTime}.  \DOL would instead provide the mechanism of modeling
-OWL Time as one coherent heterogeneous ontology, using OWL and, \eg,
-Common Logic.\footnote{This is also a use case for multiple namespaces:
-  OWL supports namespaces, CL does not.}  For the temporal description
-logic $\mathcal{DLR_{US}}$ for knowledge bases and logic-based
-temporal conceptual data modeling \cite{Artale02,Artale07a};
-$\mathcal{DLR_{US}}$ combines the propositional temporal logic with
-the {\em Since} and {\em Until} operators and the (non-temporal)
-description logic $\mathcal{DLR}$ and can be regarded as an expressive
-fragment of the first-order temporal logic $L^{since, until}$. Within
-\DOL, this would enable one to have `lightweight' time aspects with OWL
-Time, which are then properly formalized with $\mathcal{DLR_{US}}$ or
-a leaner variant TDL-Lite \cite{Artale07time}, where notions such as
-(some time) ``before'' are given a formal semantics of the intended
-meaning that the plain OWL Times human-readable object property does
-not have. The latter, then, would enable the modeler to represent the
-meaning --hence, restrict the possible models-- and check the
-consistency of the temporal constraints and so-called `evolution
-constraints' in the ontology (evolution constraints constrain
-membership of an object or an individual relation to a concept or
-relationship over time). For instance, that each divorcee must have
-been a participant in a marriage before, that boarding only may occur
-after checking in, and that any employee must obtain a salary increase
-after two years of employment. It also can be used to differentiate
-between essential and immutable parthood, therewith being precise in
-the ontology about, e.g., the distinction how a human brain is part of
-a human (humans cannot live without it), versus how a hand is part of
-a human (humans can live without it), versus how the hand is part of,
-say, a boxer, which is essential to the boxer but only for has long as
-he is a boxer \cite{AGK08}.
-
-\end{usecase}
-
-\begin{usecase}{Metadata in COLORE (Common Logic Repository)}{exists (but not yet \DOL-based)}{Annotation, Metadata vocabularies}
-  COLORE, the Common Logic Repository\footnote{\url{http://stl.mie.utoronto.ca/colore/}} is an open repository of more than 150 ontologies as of December 2011, all formalized in Common Logic.  COLORE stores metadata about its ontologies, which are represented using a custom XML schema that covers the following aspects\footnote{\url{http://stl.mie.utoronto.ca/colore/metadata.html}}, without specifying a formal semantics for them:
-  \begin{description}
-  \item[module provenance] author, date, version, description, keyword, parent ontology\footnote{Note that this use of the term ``module'' in COLORE corresponds
-to the term \termref{structured OMS} in this \IS{}.}
-  \item[axiom source provenance] name, author, year\footnote{Note that this may cover any sentences\index{sentence} in the sense of this \IS{}.}
-  \item[direct relations] maps (signature morphisms), definitional extension, conservative extension, inconsistency between ontologies, imports, relative interpretation, faithful interpretation, definable equivalence
-  \end{description}
-
-  \DOL provides built-in support for a subset of the ``direct relations'' and specifies a formal semantics for them.  In addition, it supports the implementation of  the remainder of the COLORE metadata vocabulary as an ontology, reusing suitable existing metadata vocabularies such as OMV, and it supports the implementation of one or multiple Common Logic ontologies plus their annotations as one coherent \DOL library.
-\end{usecase}
-
-%% \begin{usecase}{Extending OWL with datatypes defined in CASL}{potential use case}{...}
-%%   \begin{itemize}
-%%   \item OWL datatypes are in practice restricted to the XML Schema datatypes
-%%   \item XML Schema can only specify the \emph{syntax} of datatypes
-%%   \item CASL can specify syntax (but not quite in the same way as XML Schema) \emph{and} semantics of datatypes
-%%   \end{itemize}
-%% \end{usecase}
-
-%% ~\todonote[author=Christoph Lange,date=D:201204131320+02'00',type=todo]{ModuleRelDefinition combined with approximation and RDF-based querying of annotation/metadata dimensions}
-%% ~\todonote[author=Christoph Lange,date=D:201108212129+02'00',type=todo]{Maybe have an(other?) appendix that refers to the usage of \DOL within ontology engineering methodologies, or at least to some good practices of using \DOL}
-
-
-
-
+%\infannex{Use cases}\label{a:use-cases}
+% This annex has been removed. Some of the use cases have been moved to section \ref{c:goal}
 
 \infannex{Tools for \DOL}\label{a:tools}
 
