- Annex A now informative - reference to ontohub source of the dol-ontology has been removed.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7994,7 +7994,7 @@ $$ rel(L) =
 \appendix
 
 %\chapter[LoLa RDF Vocabulary]{Annex (normative): LoLa, an RDF vocabulary that implements the \DOL terminology}
-\normannex{\DOL Ontology}
+\infannex{\DOL Ontology}
 \label{a:dol-onto}
 
 
@@ -8025,7 +8025,9 @@ The ontology makes use of the following standard ontologies and vocabularies:
 \item SKOS (\nisref{W3C/TR REC-skos-reference:2009})
 \end{itemize}
 
-The sources of the \DOL ontology are being maintained in OWL Manchester syntax~\cite{W3C:NOTE-owl2-manchester-syntax-20091027} at \url{https://ontohub.org/meta/dol-ontology.omn}.
+%The sources of the \DOL ontology are being maintained in OWL Manchester
+% syntax~\cite{W3C:NOTE-owl2-manchester-syntax-20091027} at 
+% \url{https://ontohub.org/meta/dol-ontology.omn}.
 
 It is intended to implement future versions of the \DOL ontology as a DOL document in \DOL.
 
